--- a/QSoft.Media/QSoft.Media.csproj
+++ b/QSoft.Media/QSoft.Media.csproj
@@ -47,8 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IMediaReader.cs" />
-    <Compile Include="MP4\Box.cs" />
-    <Compile Include="MP4\Mp4Reader.cs" />
+    <Compile Include="Container\MP4\Box.cs" />
+    <Compile Include="Container\MP4\Mp4Reader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
