--- a/mediaServer/mediaServer.vcxproj
+++ b/mediaServer/mediaServer.vcxproj
@@ -77,6 +77,7 @@
       <PreprocessorDefinitions>NO_OPENSSL</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>../liveMedia/include;../BasicUsageEnvironment/include;../groupsock/include;../UsageEnvironment/include</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -108,6 +109,7 @@
       <PreprocessorDefinitions>NO_OPENSSL</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>../liveMedia/include;../BasicUsageEnvironment/include;../groupsock/include;../UsageEnvironment/include</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
