--- a/QSoft.Media/QSoft.Media.csproj
+++ b/QSoft.Media/QSoft.Media.csproj
@@ -41,8 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Container\MP4\Box.cs" />
-    <Compile Include="Container\MP4\Mp4Reader.cs" />
+    <Compile Include="EBML.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
